# vcfvifia

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  config.hpp.in
src/: BasicStatistic.cpp  BasicStatistic.hpp  Filter.cpp  Filter.hpp  Plotter.cpp  Plotter.hpp  Validator.cpp  Validator.hpp  main.cpp  utils.cpp  utils.hpp
tests/: BasicStatisticTest.cpp  CMakeLists.txt  FilterTest.cpp  UtilsTest.cpp  ValidatorTest.cpp
tests/testdata/: broken.vcf  freebayes.len50000.vcf  simpleShort.vcf
tests/testdata/expResults/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
